# papeeria

./: Dockerfile  README.md  crawl_acm  launch-sufler-app  launch-sufler-index  menu.js  pom.xml  search.py  searcher.py  start_search  template-page-style.css  template-page-style.less  thesis-template-page.html  wiki_crawler.py
backend/spellchecker/: .gitignore  README.md  huntojson.sh
backend/spellchecker/libparser/: CMakeLists.txt  parser.cpp
backend/spellchecker/libparser/parsers/: latexparser.cxx  textparser.cxx  textparser.hxx
backend/spellchecker/proto/: spellchecker.proto
backend/spellchecker/server/: client.py  parser.py  requirements.txt  run_codegen.py  server.py  spellchecker.py  spellchecker_pb2.py  test.py
backend/tex/: aux_parser.py  tmp.aux  tmp_json.out
lib/lucene-5.0.0/demo/: lucene-xml-query-demo.war
lib/lucene-5.0.0/docs/: JRE_VERSION_MIGRATION.html  MIGRATE.html  SYSTEM_REQUIREMENTS.html  index.html
lib/lucene-5.0.0/docs/analyzers-common/: allclasses-frame.html  allclasses-noframe.html  constant-values.html  deprecated-list.html  help-doc.html  index.html  overview-frame.html  (+3 more)
resources/indexer/: indexer_config.xml
resources/retriever/: oai_retrieve_config.xml
resources/searcher/: searcher_config.xml
src/: build_corpus.py  log4j.properties  server.py  wiki_crawler.py
src/main/: log4j.properties
src/main/resources/: log4j.properties
src/org/ner/: IndexFiles.java  SearchFiles.java
tools/gen-latex-symbols/: .gitignore  README.md  index.js  package.json
tools/gen-latex-symbols/data/: less.mustache  symbols.json
(+5763 files in other folders)
